--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700');
-* {
+/* * {
     font-family: "Open Sans", Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 300;
-}
+} */
 
 body{
     background-color: blue;
